[CW] fixed mistakes

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -74,23 +74,23 @@
 \tableofcontents
 
 \intro
-Данная курсовая работа освещает некоторые вопросы теории квадратичных форм.
+В данной курсовой работе будут представлены основные вопросы и положения теории квадратичных форм.
 
-Квадратичные формы являются очень важной вещью в приложениях и активно используются в современной физике, математике и computer science.
+Квадратичные формы очень важны и активно используются в таких областях как современная физика, математика и пр.
 
-Открыты квадратичные формы были во время рассмотрения кривых второго порядка Лагранжем, а после расширенны многими другими математиками, в том числе Гаусс внёс огромный вклад в развитие данной теории. 
+Открытие квадратичных форм в большей степени соотносится с трудами Лагранжа и его работами, связанными с рассмотрением им кривых второго порядка. Позднее теория квадратичных форм была расширена другими математиками-учеными, среди которых был Гаусс.
 
-Целью работы является рассмотрения понятия квадратичных форм, связанных с этим определёний, а так же изучениям свойств. 
+Целью работы является рассмотрение понятия квадратичных форм, связанных с этим определёний, а так же изучениям свойств. 
 
-\section{Квадратичная форма и ее свойства}
+\section{Основные понятия и определения}
 
 \tab Квадратичной формой над множеством $\mathds{a}$ называют однородный полином второй степени с коэффициентами из $\mathds{a}$;
 \tl
 (Полином (многочлен) $F(x_1,x_2,...,x_l)$ называется однородным полиномом или формой степени (или порядка) $m$, если все его одночлены имеют степень $m$. Однородный полином первого, второго или третьего порядков называют также, соответственно, линейной, квадратичной или кубической формой.)
 \tl
-Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных:
+Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных будет иметь вид:
 \\
-$$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}}\eqno(1.1)$$
+$$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsum{k=1}{n}{a_{jk}x_{j}x{k}},\eqno(1.1)$$
 \\ \tab где $a_{jk} = f_{jk}$ некоторые числа, называемые коэффициентами.
 \\
 Не ограничивая общности, можно считать, что $a_{jk} = a_{kj}$. Квадратичная форма называется действительной или комплексной в зависимости от того, являются ли ее коэффициенты соответственно действительными или комплексными числами. Будем рассматривать действительные квадратичные формы.
@@ -158,7 +158,7 @@ a_{n1} & a_{n2} & \cdots & a_{nn}
 Квадратичную форму $n$ переменных $x_1, x_2,...,x_n$ можно записать в матричном виде. Действительно, если $Х$ – матрица-столбец из переменных $(x_1, x_2,...,x_n)$, $x^{T}$ – матрица, полученная транспонированием матрицы $X$, т.е. матрица-строка из тех же переменных, то $f(x_1, x_2,...,x_n)= X^{T}AX$, где $A$ - это исходная матрица квадратичной формы.
 
 \section{Преобразование квадратичной формы при линейном однородном преобразовании переменных}
-\tab Рассмотрим квадратичную форму (1.1). Перейдем к новым переменным $y_1, y_2…,y_n$ по формулам (1.3):
+\tab Рассмотрим квадратичную форму (1.1). Перейдем к новым переменным $y_1, y_2…,y_n$ по нижеследующим формулам (1.3):
 $$x_1=b_{11}y_1+b_{12}y_2+...+b_{1n}y_n$$
 $$x_2=b_{21}y_1+b_{22}y_2+...+b_{2n}y_n$$
 $$...$$
@@ -193,7 +193,9 @@ y_{n}
 1.  $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n)$.
 \tl
 2. Если $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n), \phi(y_1, y_2,...,y_n) \sim \psi(z_1,z_2,...,z_n)$, то $f(x_1, x_2,...,x_n) \sim \psi(z_1,z_2,...,z_n)$
-\tl
+
+Все вышеперечисленное в конечном итоге приводит нас к теореме:
+
 Теорема 1. Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
 \tl
 Следствие 1. Определители матриц конгруэнтных невырожденных действительных квадратичных форм имеют одинаковые знаки.
@@ -205,6 +207,8 @@ y_{n}
 \tl
 Каноническая квадратичная форма называется нормальной (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
 \tl
+Очень важным является возможность привести любую квадратичную форму к канонической. В этом нам помагает нижеследующие теоремы:
+
 Теорема 2. Любая квадратичная форма некоторым невырожденным линейным преобразованием может быть приведена к каноническому виду \newline $\phi(y_1,y_2,...,y_n)=b_{11}y_1^2+b_{22}y_2^2+...+b_{nn}y_n^2$ , где $y_1,y_2,...,y_n$ - новые переменные.
 \tl
 Некоторые из коэффициентов $b_{ij}$ могут оказаться равными нулю; число отличных от нуля коэффициентов в этой формуле равно рангу $r$ матрицы квадратичной формы $\phi$. 
@@ -226,7 +230,7 @@ $\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
 
 
 \section{Знакоопределенные квадратичные формы}
-\tab Действительная квадратичная форма $f(x_1,x_2…,x_n)$ называется положительно-определенной, если она приводится к нормальному виду, состоящему из $n$ положительных квадратов: $f(x_1,x_2…,x_n) \sim \phi(y_1,y_2….y_n)$, где \newline
+\tab Действительная квадратичная форма $f(x_1,x_2…,x_n)$ называется\\ положительно-определенной, если она приводится к нормальному виду, состоящему из $n$ положительных квадратов: $f(x_1,x_2…,x_n) \sim \phi(y_1,y_2….y_n)$, где \newline
 $$\phi(y_1,y_2, … ,y_n)=y_1^2+y_2^2+…+y_n^2$$ т.е. если ранг и положительный индекс инерции равны числу неизвестных.
 \tl
 Систему значений $x_1,x_2…,x_n$ назовем нулевой, если $x_1 = х_2 = ... = x_n = 0$, и ненулевой, если хотя бы одно из них отлично от нуля.
@@ -316,17 +320,20 @@ dy_1&dy_2
 
 \begin{thebibliography}{00} % Список литературы
 \bibitem{1}
-http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy
-\bibitem{2}
-Eva Bayer-Fluckiger David Lewis, Andrew Ranicki. Quadratic Forms and Their Applications
-\bibitem{3}
-В.А. Ильин, Э.Г. Позняк. Линейная алгебра. М.: Наука, 1999
-\bibitem{4}
-Гусак А.А., Гусак Г.М., Бричикова Е.А. Справочник по высшей математике. Мн.: ТетраСистемс, 1999. - 640с. 
-\bibitem{5}
-Крамер Г. Математические методы статистики. – М.: Регулярная и хаотическая динамика, 2003. 
-\bibitem{6}
 Виноградов И.М. Элементы высшей математики. (Аналитическая геометрия. Дифференциальное исчисление. Основы теории чисел). Учебник для вузов. – М.: Высш. шк., 1999.
+\bibitem{2}
+Гусак А.А., Гусак Г.М., Бричикова Е.А. Справочник по высшей математике. - Мн.: ТетраСистемс, 1999. - 640с. 
+\bibitem{3}
+Крамер Г. Математические методы статистики. – М.: Регулярная и хаотическая динамика, 2003. 
+\bibitem{4}
+Ильин В.А., Позняк Э.Г. Линейная алгебра. - М.: Наука, 1999
+\bibitem{5}
+Eva Bayer-Fluckiger David Lewis, Andrew Ranicki. Quadratic Forms and Their Applications - Published as Contemporary Mathematics 272, A.M.S. (2000)
+\bibitem{6}
+Квадратичные формы [Электронный ресурс]:\\
+URL: \href{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy}{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy} (дата обращения 12.04.2016).
+
+
 \end{thebibliography}
 
 \end{document}
