[CW] added bold text, changed some mistakes

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -30,7 +30,6 @@
 
 
 \begin{document}
-%\input titlepage
 
 \chair{дифференциальных уравнений и прикладной математики}
 
@@ -84,9 +83,34 @@
 
 \section{Основные понятия и определения}
 
-\tab Квадратичной формой над множеством $\mathds{a}$ называют однородный полином второй степени с коэффициентами из $\mathds{a}$;
+\textbf{Базис} - набор $n$ векторов в $n-$мерном линейном пространстве, таких, что любой вектор пространства может быть представлен в виде некоторой их линейной комбинации, при этом ни один из базисных векторов не представим в виде линейной комбинации остальных. 
+
+\textbf{Матрицей} называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком.
+
+\textbf{Определитель квадратной матрицы A} - некое число вида $$|A|=\det A=\begin{vmatrix}
+a_{11} & a_{12} & \cdots & a_{1n} \\ 
+a_{21} & a_{22} & \cdots & a_{2n} \\ 
+\cdots \\
+a_{n1} & a_{n2} & \cdots & a_{nn} \\ 
+\end{vmatrix}
+$$
+
+\textbf{Минор} $A \begin{bmatrix} \alpha_1 & \alpha_2 \dots \alpha_k \\ \beta_1 & \beta_2 \dots \beta_k \end{bmatrix}$ матрицы $A$ - определитель такой квадратной матрицы $B$ порядка $k$ (который называется также порядком этого минора), элементы которой стоят в матрице $A$ на пересечении строк с номерами $\alpha_1, \alpha_2 \dots \alpha_k$ и столбцов с номерами $\beta_1, \beta_2 \dots \beta_k$.\newline
+Если номера отмеченных строк совпадают с номерами отмеченных столбцов, то минор называется \textbf{главным}, а если отмечены первые $k$ строк и первые $k$ столбцов - \textbf{угловым} или \textbf{ведущим главным}.
+
+\textbf{Ранг матрицы} — наивысший из порядков миноров этой матрицы, определитель которых отличен от нуля.
+
+\textbf{Билинейной формой} называется функция $F:L \times L \to K$, линейная по каждому из аргументов, где $L$ есть векторное пространство над полем $K$: \\
+\tab $F(x+z,y)=F(x,y)+F(z,y)$ \\
+\tab $F(x,y+z)=F(x,y)+F(x,z)$ \\
+\tab $F(\lambda x,y)= F(x,\lambda y) = \lambda F(x,y)$, здесь $x,y,\in L$ и $\lambda \in K$
+
+
+\section{Квадратичная форма и ее свойства}
+
+\tab \textbf{Квадратичной формой над множеством $\mathds{a}$} называют однородный полином второй степени с коэффициентами из $\mathds{a}$;
 \tl
-(Полином (многочлен) $F(x_1,x_2,...,x_l)$ называется однородным полиномом или формой степени (или порядка) $m$, если все его одночлены имеют степень $m$. Однородный полином первого, второго или третьего порядков называют также, соответственно, линейной, квадратичной или кубической формой.)
+(Полином (многочлен) $F(x_1,x_2,...,x_l)$ называется \textbf{однородным} полиномом или формой степени (или порядка) $m$, если все его одночлены имеют степень $m$. Однородный полином первого, второго или третьего порядков называют также, соответственно, линейной, квадратичной или кубической формой.)
 \tl
 Если переменные квадратичной формы обозначить $x_1,...,x_n$, то общий вид квадратичной формы от этих переменных будет иметь вид:
 \\
@@ -99,14 +123,7 @@ $$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsu
 \tl
 1) Для любой квадратичной формы $А$ существует единственная симметричная билинейная форма B, такая, что $A(x) = B(x, x)$. Билинейную форму B называют полярной к $A$. 
 \tl
-(Билинейной формой называется функция $F:L \times L \to K$, линейная по каждому из аргументов, где $L$ есть векторное пространство над полем $K$: \\
-\tab $F(x+z,y)=F(x,y)+F(z,y)$ \\
-\tab $F(x,y+z)=F(x,y)+F(x,z)$ \\
-\tab $F(\lambda x,y)= F(x,\lambda y) = \lambda F(x,y)$, здесь $x,y,\in L$ и $\lambda \in K$)
-\tl
 Матрица билинейной формы в произвольном базисе совпадает с матрицей полярной ей билинейной формы в том же базисе.
-\tl
-(Базис — множество таких векторов в векторном пространстве, что любой вектор этого пространства может быть единственным образом представлен в виде линейной комбинации векторов из этого множества — базисных векторов.)
 \tl
 2) Если матрица квадратичной формы имеет полный ранг, то квадратичную форму называют невырожденной, иначе - вырожденной.
 \tl
@@ -117,9 +134,6 @@ $$f(x_1,...x_n)=\dsum{1 \le j \le k \le n}{f_{jk}x_jx_k} = \udsum{j=1}{n}{}\udsu
 Квадратичная форма является положительно определенной, тогда и только тогда, когда все угловые миноры её матрицы строго положительны.
 \tl
 Квадратичная форма является отрицательно определенной, тогда и только тогда, когда знаки всех угловых миноров её матрицы чередуются, причем минор порядка 1 отрицателен.
-\tl
-(Минором k-го порядка матрицs M с  строк и  столбцов называется определитель k-го порядка, элементами которого являются элементы матрицы М, стоящих на пересечении k строк и k столбцов. 
-Минор, расположенный в первых k строках и k столбцах, называется угловым минором.)
 \tl
 4) Квадратичная форма $A(x,x)$ называется знакопеременной, если она принимает как положительные, так и отрицательные значения.
 \tl
@@ -136,7 +150,7 @@ $f_{11}x_{1}^{2}+f_{12}x_{1}x_{2}+...+f_{1n}x_{1}x_{n}+\dsum{2 \le j \le k \le n
 
 
 \section{Матрица квадратичной формы}
-\tab Матрицей квадратичной формы называется матрица, составленная из ее коэффициентов. Квадратичной форме соответствует единственная симметрическая матрица (Симметрической называют квадратную матрицу, элементы которой симметричны относительно главной диагонали. Более формально, симметричной называют такую матрицу $A$ что $\forall i,j:a_{ij}=a_{ji}$.)
+\tab \textbf{Матрицей квадратичной формы} называется матрица, составленная из ее коэффициентов. Квадратичной форме соответствует единственная симметрическая матрица (Симметрической называют квадратную матрицу, элементы которой симметричны относительно главной диагонали. Более формально, симметричной называют такую матрицу $A$ что $\forall i,j:a_{ij}=a_{ji}$.)
 
 $$A = \begin{pmatrix}
 a_{11} & a_{12} & \cdots & a_{1n} \\
@@ -150,8 +164,6 @@ a_{n1} & a_{n2} & \cdots & a_{nn}
 И наоборот, всякой симметрической матрице соответствует единственная квадратичная форма с точностью до обозначения переменных.
 \tl
 Рангом квадратичной формы называют ранг ее матрицы. Квадратичная форма $n$ переменных называется невырожденной, если ее матрица невырожденная, т. е. $r = n$, и вырожденной, если $r < n$, где $r=rang(A)$. 
-\tl
-Матрицей называется прямоугольная таблица из чисел, содержащая некоторое количество $m$ строк и некоторое количество $n$ столбцов. Числа $m$ и $n$ называются порядками матрицы. В случае, если $m = n$, матрица называется квадратной, а число $m= n$ – ее порядком.
 \tl
 В дальнейшем для записи матриц будут применяться либо сдвоенные черточки, либо круглые скобки.
 \tl
@@ -188,7 +200,7 @@ y_{n}
 \tab
 В квадратичной форме (1.1) вместо $(x_1, x_2,...,x_n)$ подставим их выражения через $(y_1, y_2,...,y_n)$ определяемые формулами (1.3), получим квадратичную форму $\phi (y_1, y_2,...,y_n)$ $n$ переменных с некоторой матрицей $С$. В этом случае говорят, что квадратичная форма $f(x_1, x_2,...,x_n)$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ линейным однородным преобразованием (1.3). Линейное однородное преобразование (1.4) называется невырожденным, если $det B \ne 0$, где $det$ – определитель матрицы $B$.
 \tl
-Две квадратичные формы называются конгруэнтными, если существует невырожденное линейное однородное преобразование, переводящее одну форму в другую. Если $f(x_1, x_2,...,x_n)$ и $\phi(y_1, y_2,...,y_n)$ конгруэнтны, то будем писать $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n)$. Свойства конгруэнтности квадратичных форм:
+Две квадратичные формы называются \textbf{конгруэнтными}, если существует невырожденное линейное однородное преобразование, переводящее одну форму в другую. Если $f(x_1, x_2,...,x_n)$ и $\phi(y_1, y_2,...,y_n)$ конгруэнтны, то будем писать $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n)$. Свойства конгруэнтности квадратичных форм:
 \tl
 1.  $f(x_1, x_2,...,x_n) \sim \phi(y_1, y_2,...,y_n)$.
 \tl
@@ -196,24 +208,24 @@ y_{n}
 
 Все вышеперечисленное в конечном итоге приводит нас к теореме:
 
-Теорема 1. Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
+\textbf{Теорема 1.} Квадратичная форма $f(x_1, x_2,...,x_n)$ с матрицей $А$ линейным однородным преобразованием $Х = ВУ$ переводится в квадратичную форму $\phi(y_1, y_2,...,y_n)$ с матрицей $C=B^{T}AB$.
 \tl
-Следствие 1. Определители матриц конгруэнтных невырожденных действительных квадратичных форм имеют одинаковые знаки.
+\textbf{Следствие 1.} Определители матриц конгруэнтных невырожденных действительных квадратичных форм имеют одинаковые знаки.
 \tl
-Следствие 2. Конгруэнтные квадратичные формы имеют одинаковые ранги.
+\textbf{Следствие 2.} Конгруэнтные квадратичные формы имеют одинаковые ранги.
 
 \section{Приведение действительной квадратичной формы к нормальному виду}
-\tab Квадратичная форма $f(x_1,x_2,...,x_n)$ называется канонической, если она не содержит произведений различных переменных, т.е. $$f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$$
+\tab Квадратичная форма $f(x_1,x_2,...,x_n)$ называется \textbf{канонической}, если она не содержит произведений различных переменных, т.е. $$f(x_1,x_2,...,x_n)=\udsum{i=1}{r}{a_{ii}x_i^2} (r \le n)$$
 \tl
-Каноническая квадратичная форма называется нормальной (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
+Каноническая квадратичная форма \textbf{называется нормальной} (или имеет нормальный вид), если $|a_n| = 1 ( i= 1, 2, . . . , r)$, т. е. отличные от нуля коэффициенты при квадратах переменных равны $+1$ или -$1$. 
 \tl
 Очень важным является возможность привести любую квадратичную форму к канонической. В этом нам помагает нижеследующие теоремы:
 
-Теорема 2. Любая квадратичная форма некоторым невырожденным линейным преобразованием может быть приведена к каноническому виду \newline $\phi(y_1,y_2,...,y_n)=b_{11}y_1^2+b_{22}y_2^2+...+b_{nn}y_n^2$ , где $y_1,y_2,...,y_n$ - новые переменные.
+\textbf{Теорема 2.} Любая квадратичная форма некоторым невырожденным линейным преобразованием может быть приведена к каноническому виду \newline $\phi(y_1,y_2,...,y_n)=b_{11}y_1^2+b_{22}y_2^2+...+b_{nn}y_n^2$ , где $y_1,y_2,...,y_n$ - новые переменные.
 \tl
 Некоторые из коэффициентов $b_{ij}$ могут оказаться равными нулю; число отличных от нуля коэффициентов в этой формуле равно рангу $r$ матрицы квадратичной формы $\phi$. 
 
-Теорема 3. Любую действительную квадратичную форму линейным невырожденным преобразованием можно привести к нормальному виду
+\textbf{Теорема 3.} Любую действительную квадратичную форму линейным невырожденным преобразованием можно привести к нормальному виду
 
 $\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
 Число входящих сюда квадратов равно рангу формы.
@@ -221,21 +233,21 @@ $\psi(z_1,z_2,...,z_n)=z_1^2+z_2^2+...+z_{k-1}^2-z_k^2-...-z_r^2$
 \section{Закон инерции квадратичных форм}
 \tabЗакон инерции квадратичных форм выражает:
 \tl
-Теорема 4. Число положительных и число отрицательных квадратов в нормальном виде, к которому приводится данная действительная квадратичная форма невырожденным действительным линейным преобразованием, не зависит от выбора преобразования.
+\textbf{Теорема 4.} Число положительных и число отрицательных квадратов в нормальном виде, к которому приводится данная действительная квадратичная форма невырожденным действительным линейным преобразованием, не зависит от выбора преобразования.
 \tl
-Число положительных квадратов в нормальной форме, к которой приводится данная действительная квадратичная форма, называют положительным индексом инерции этой формы, число отрицательных квадратов - отрицательным индексом инерции, разность между положительным и отрицательным индексами инерции - сигнатурой формы $f$. Если известен ранг формы, то задание любого из трех указанных выше чисел определяет два других.
+Число положительных квадратов в нормальной форме, к которой приводится данная действительная квадратичная форма, называют \textbf{положительным индексом инерции} этой формы, число отрицательных квадратов - \textbf{отрицательным индексом инерции}, разность между положительным и отрицательным индексами инерции - \textbf{сигнатурой формы} $f$. Если известен ранг формы, то задание любого из трех указанных выше чисел определяет два других.
 \tl
-Теорема 5. Две действительные квадратичные формы от $n$ переменных тогда и только тогда конгруэнтны, когда они имеют одинаковые ранги и одинаковые сигнатуры.
+\textbf{Теорема 5.} Две действительные квадратичные формы от $n$ переменных тогда и только тогда конгруэнтны, когда они имеют одинаковые ранги и одинаковые сигнатуры.
 матрица квадратичный переменный
 
 
 \section{Знакоопределенные квадратичные формы}
-\tab Действительная квадратичная форма $f(x_1,x_2…,x_n)$ называется\\ положительно-определенной, если она приводится к нормальному виду, состоящему из $n$ положительных квадратов: $f(x_1,x_2…,x_n) \sim \phi(y_1,y_2….y_n)$, где \newline
+\tab Действительная квадратичная форма $f(x_1,x_2…,x_n)$ называется\\ \textbf{положительно-определенной}, если она приводится к нормальному виду, состоящему из $n$ положительных квадратов: $f(x_1,x_2…,x_n) \sim \phi(y_1,y_2….y_n)$, где \newline
 $$\phi(y_1,y_2, … ,y_n)=y_1^2+y_2^2+…+y_n^2$$ т.е. если ранг и положительный индекс инерции равны числу неизвестных.
 \tl
 Систему значений $x_1,x_2…,x_n$ назовем нулевой, если $x_1 = х_2 = ... = x_n = 0$, и ненулевой, если хотя бы одно из них отлично от нуля.
 \tl
-Теорема 6. Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$.
+\textbf{Теорема 6.} Действительная квадратичная форма $f(x_1,x_2…,x_n)$ является положительно-определенной тогда и только тогда, когда она принимает положительные значения при любой ненулевой системе значений переменных $x_1,x_2…,x_n$.
 \tl Пусть дана квадратичная форма $f(x_1,x_2…,x_n)$ с матрицей $A = (ay)$. Главными минорами квадратичной формы $f$ называются миноры  
 $$a_{11}, 
 \begin{vmatrix}
@@ -262,19 +274,19 @@ a_{n1} & a_{n2} & \cdots & a_{nn} \\
 $$
 \tab т.е. миноры порядка $1, 2, ... , n$ матрицы $А$, расположенные в левом верхнем углу; последний из них совпадает с определителем матрицы.
 \tl
-Теорема 7. Квадратичная форма $f(x_1,x_2…,x_n)$ с действительной матрицей является положительно-определенной тогда и только тогда, когда все ее главные миноры положительны.
+\textbf{Теорема 7.} Квадратичная форма $f(x_1,x_2…,x_n)$ с действительной матрицей является положительно-определенной тогда и только тогда, когда все ее главные миноры положительны.
 \tl
 Действительная квадратичная форма называется отрицательно-определенной, если она является невырожденной и приводится к нормальному виду, содержащему только отрицательные квадраты всех переменных; эту форму можно привести к виду:
 $\phi(y_1,y_2….y_n)= -y_{1}^2-y_{2}^2 -…- y_{n}^2$
 \tl
-Теорема 8. Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны.
+\textbf{Теорема 8.} Квадратичная форма является отрицательно-определенной тогда и только тогда, когда ее главные миноры четного порядка положительны, а нечетного - отрицательны.
 \tl
-Положительно-определенные и отрицательно-определенные квадратичные формы называются знакоопределенными квадратичными формами.
+Положительно-определенные и отрицательно-определенные квадратичные формы называются \textbf{знакоопределенными квадратичными формами}.
 \tl
-Вырожденные квадратичные формы, нормальный вид которых состоит из квадратов одного знака, называются полуопределенными. Неопределенными называются квадратичные формы, нормальный вид которых содержит как положительные, так и отрицательные квадраты переменных.
+Вырожденные квадратичные формы, нормальный вид которых состоит из квадратов одного знака, называются \textbf{полуопределенными}. \textbf{Неопределенными} называются квадратичные формы, нормальный вид которых содержит как положительные, так и отрицательные квадраты переменных.
 
 \section{Примеры использования}
-\tab Пример 1. Найти второй дифференциал сложной функции $z(y)=f(x(y))$, где $x(y)=Sy$, в окрестности некоторого фиксированного значения векторного аргумента $y0$, если известны матрица Гессе, вычисленная при $x=x0=Sy0$, и матрица $S$
+\tab \textbf{Пример 1.} Найти второй дифференциал сложной функции $z(y)=f(x(y))$, где $x(y)=Sy$, в окрестности некоторого фиксированного значения векторного аргумента $y0$, если известны матрица Гессе, вычисленная при $x=x0=Sy0$, и матрица $S$
 линейной замены переменных:
 $$\frac{d^2f(x_0)}{dx^Tdx}
 =\begin{pmatrix}
@@ -332,7 +344,6 @@ Eva Bayer-Fluckiger David Lewis, Andrew Ranicki. Quadratic Forms and Their Appli
 \bibitem{6}
 Квадратичные формы [Электронный ресурс]:\\
 URL: \href{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy}{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy} (дата обращения 12.04.2016).
-
 
 \end{thebibliography}
 
