[CW] rewrited intro

--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -75,9 +75,9 @@
 \intro
 В данной курсовой работе будут представлены основные вопросы и положения теории квадратичных форм.
 
-Квадратичные формы очень важны и активно используются в таких областях как современная физика, математика и пр.
+Квадратичные формы очень важны и активно используются в таких областях как современная физика, математика и прочих дисциплинах.
 
-Открытие квадратичных форм в большей степени соотносится с трудами Лагранжа и его работами, связанными с рассмотрением им кривых второго порядка. Позднее теория квадратичных форм была расширена другими математиками-учеными, среди которых был Гаусс.
+В 628-м году индийский математик Брахмагупта написал \\ <<Brahmasphutasiddhanta>>, которое включало в себя уравнение вида $x^2-ny^2=с$. Сейчас это уравнение называется уравнением Пелля и записывается в виде $x^2-ny^2=1$. В Европе проблему решения этого уравнения изучали такие ученые как Эйлер, Лагранж, Браункер и многие другие. В частности, Лагранж в своих трудах значительно расширил теорию квадратичных форм изучая кривые второго порядка. В 1801 году Гаусс опубликовал <<Disquisitiones Arithmeticae>>, большая часть которого была посвещена  полной теории бинарных квадратичных форм над целыми числами. С тех пор эта концепция была обобщена, и связана с квадратичными числовыми полями, модулярным группами и другими областями математики.
 
 Целью работы является рассмотрение понятия квадратичных форм, связанных с этим определёний, а так же изучениям свойств. 
 
@@ -344,6 +344,9 @@ Eva Bayer-Fluckiger David Lewis, Andrew Ranicki. Quadratic Forms and Their Appli
 \bibitem{6}
 Квадратичные формы [Электронный ресурс]:\\
 URL: \href{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy}{http://mathhelpplanet.com/static.php?p=linyeinye-i-kvadratichnye-formy} (дата обращения 12.04.2016).
+\bibitem{7}
+Квадратичные формы [Электронный ресурс]:\\
+URL: \href{https://en.wikipedia.org/wiki/Quadratic\underline{ }form}{https://en.wikipedia.org/wiki/Quadratic\underline{ }form} \\ (дата обращения 01.05.2016).
 
 \end{thebibliography}
 
