--- a/course_work_number_one/main.tex
+++ b/course_work_number_one/main.tex
@@ -75,11 +75,11 @@
 \intro
 В данной курсовой работе будут представлены основные вопросы и положения теории квадратичных форм.
 
-Квадратичные формы очень важны и активно используются в таких областях как современная физика, математика и прочих дисциплинах.
+Квадратичные формы очень важны и активно используются в таких областях как современная физика и математика.
 
-В 628-м году индийский математик Брахмагупта написал \\ <<Brahmasphutasiddhanta>>, которое включало в себя уравнение вида $x^2-ny^2=с$. Сейчас это уравнение называется уравнением Пелля и записывается в виде $x^2-ny^2=1$. В Европе проблему решения этого уравнения изучали такие ученые как Эйлер, Лагранж, Браункер и многие другие. В частности, Лагранж в своих трудах значительно расширил теорию квадратичных форм изучая кривые второго порядка. В 1801 году Гаусс опубликовал <<Disquisitiones Arithmeticae>>, большая часть которого была посвещена  полной теории бинарных квадратичных форм над целыми числами. С тех пор эта концепция была обобщена, и связана с квадратичными числовыми полями, модулярным группами и другими областями математики.
+В 628-м году индийский математик Брахмагупта написал \\ <<Brahmasphutasiddhanta>>, которое включало в себя уравнение вида $$x^2-ny^2=c.$$ Сейчас это уравнение называется уравнением Пелля и записывается в виде $$x^2-ny^2=1.$$ В Европе проблему решения этого уравнения изучали такие ученые как Эйлер, Лагранж, Браункер и многие другие. В частности, Лагранж в своих трудах значительно расширил теорию квадратичных форм изучая кривые второго порядка. В 1801 году Гаусс опубликовал <<Disquisitiones Arithmeticae>>, большая часть которого была посвещена  полной теории бинарных квадратичных форм над целыми числами. С тех пор эта концепция была обобщена, и связана с квадратичными числовыми полями, модулярным группами и другими областями математики.
 
-Целью работы является рассмотрение понятия квадратичных форм, связанных с этим определёний, а так же изучениям свойств. 
+Целью работы является рассмотрение понятия квадратичных форм, связанных с этим определёний, а так же изучениям их  свойств. 
 
 \section{Основные понятия и определения}
 
